--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -63,7 +63,8 @@
 
   font-size: 1.5rem;
 
-  height: 2.25rem;
+  min-height: 2.25rem;
+  max-height: 2.25rem;
 }
 @media only screen and (max-width: 575px) {
   #movie-title-input {
@@ -84,7 +85,8 @@
 
   font-size: 1.5rem;
 
-  height: 2.25rem;
+  min-height: 2.25rem;
+  max-height: 2.25rem;
 
   text-align: center;
 }
